# internal/strava/web/server.go
@@ -6,4 +6,6 @@ type ServerInterface interface {
 	Auth(w http.ResponseWriter, r *http.Request)
 	Callback(w http.ResponseWriter, r *http.Request)
 	GetAthlete(w http.ResponseWriter, r *http.Request)
+	GetAthleteStats(w http.ResponseWriter, r *http.Request)
+	GetAthleteTotalDistance(w http.ResponseWriter, r *http.Request)
 }
